WIP debug analytics

--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -4,7 +4,7 @@
   </button>
 
   <ng-container *ngIf="user$ | async as user">
-    <article>
+    <article *ngIf="user.org">
       <img [ref]="user.org.logo" asset="profil_user.svg" alt="Organization Logo">
 
       <div>
