--- a/apps/crm/crm/src/app/crm/pages/movie/movie.component.html
+++ b/apps/crm/crm/src/app/crm/pages/movie/movie.component.html
@@ -111,7 +111,8 @@
     <h2>Analytics</h2>
     <bf-table [source]="analytics$ | async" useFilter>
       <ng-template colRef="user" label="Name" let-user sort>
-        <a [href]="'mailto:' + user?.email">{{ user | displayName }}</a>
+        <a *ngIf="user?.email" [href]="'mailto:' + user.email">{{ user | displayName }}</a>
+        <b *ngIf="!user?.email">{{ user | displayName }}</b>
       </ng-template>
       <ng-template colRef="org.name" label="Company name" let-name sort>
         {{ name }}
