create avails test

--- a/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
@@ -1,6 +1,6 @@
 <header>
   <h2>Availabilities</h2>
-  <a mat-stroked-button routerLink="select">Add avails</a>
+  <a mat-stroked-button routerLink="select" test-id="add">Add avails</a>
 </header>
 
 <section class="surface" fxLayout="column" fxLayoutGap="16px">
