--- a/apps/catalog/catalog/src/app/dashboard/dashboard.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         <mat-icon matListIcon svgIcon="video_library"></mat-icon>
         <span matLine><b>My Titles</b></span>
       </a>
-      <a mat-list-item routerLink="avails" routerLinkActive="active">
+      <a mat-list-item routerLink="avails" routerLinkActive="active" test-id="avails">
         <mat-icon matListIcon svgIcon="calendar_today"></mat-icon>
         <span matLine><b>My Avails</b></span>
       </a>
