--- a/libs/contract/src/lib/term/components/form/form.component.html
+++ b/libs/contract/src/lib/term/components/form/form.component.html
@@ -38,7 +38,7 @@
     <ng-template saveButtonText>Validate</ng-template>
   </bf-form-table>
 
-  <button mat-flat-button color="primary" [disabled]="form.disabled" (click)="saveAvails()">Save Avails</button>
+  <button mat-flat-button color="primary" [disabled]="form.disabled" (click)="saveAvails()" test-id="save">Save Avails</button>
 
 </ng-container>
 
