--- a/apps/festival/festival/src/app/event/view/view.component.html
+++ b/apps/festival/festival/src/app/event/view/view.component.html
@@ -66,7 +66,7 @@
             <h6>{{ event.type | toLabel: 'eventTypes' }} session closed</h6>
             <pre class="mat-body-1">{{ event | eventRange }}</pre>
             
-            <ng-container *ngIf="event.type === 'screening' && event.accessibility === 'private'">
+            <ng-container *ngIf="event.type === 'screening' && event.accessibility === 'private' && event.meta.titleId">
               <event-request-screening [movieId]="event.meta.titleId"></event-request-screening>
               <button mat-button [disabled]="requestSent" (click)="requestAskingPrice(event.meta.titleId)">Request Asking Price</button>
             </ng-container>
