--- a/libs/user/src/lib/auth/pages/preferences/modal/preferences.component.html
+++ b/libs/user/src/lib/auth/pages/preferences/modal/preferences.component.html
@@ -7,6 +7,9 @@
   
   <footer fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="24px">
     <button mat-flat-button color="accent" (click)="update()">Save Preferences</button>
-    <button mat-button test-id="skip-preferences" (click)="close()">Maybe Later</button>
+    <section>
+      <button mat-button test-id="skip-preferences" (click)="close('dismiss')">Don't show this again</button>
+      <button mat-button (click)="close()">Maybe Later</button>
+    </section>
   </footer>
 </global-modal>
