--- a/apps/crm/crm/src/app/crm/pages/movie/movie.component.html
+++ b/apps/crm/crm/src/app/crm/pages/movie/movie.component.html
@@ -129,6 +129,9 @@
       <ng-template colRef="screeningRequested" label="Screening requested" let-screeningRequested sort>
         {{ screeningRequested ? screeningRequested : '-' }}
       </ng-template>
+      <ng-template colRef="screenerRequested" label="Screener requested" let-screenerRequested sort>
+        {{ screenerRequested ? screenerRequested : '-' }}
+      </ng-template>
       <ng-template colRef="askingPriceRequested" label="Asking price requested" let-askingPriceRequested sort>
         {{ askingPriceRequested ? askingPriceRequested : '-' }}
       </ng-template>
