--- a/apps/catalog/catalog/src/app/marketplace/title/selection/specific-terms/specific-terms.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/specific-terms/specific-terms.component.html
@@ -1,7 +1,7 @@
 <global-modal>
   <section fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="12px" >
-    <h2>Are you sure you wish to submit this contract?</h2>
-    <p>Please verify if all the contract elements are convenient for you.</p>
+    <h2>Are you sure you wish to send this Offer?</h2>
+    <p>Please verify that all the Offer details are convenient to you.</p>
     <form [formGroup]="form" fxLayout="column" (ngSubmit)="createOffer()">
       <mat-form-field appearance="outline">
         <mat-label>Specific Terms</mat-label>
@@ -15,6 +15,7 @@
           maxlength="500"
           test-id="specific-terms">
         </textarea>
+        <mat-hint>You can precise any specific conditions such as: MG, Revenue Sharing, Delivery Specifications... ).</mat-hint>
       </mat-form-field>
       <mat-checkbox class="example-margin" formControlName="acceptTerms">
         <p>
@@ -24,14 +25,14 @@
       <footer fxLayout="column" fxLayoutAlign="center center">
         <button mat-flat-button color="primary" [disabled]="form.disabled || !form.value.acceptTerms" type="submit">
           <span>
-            Yes, submit Contract
+            Send your Offer
           </span>
           <ng-container *ngIf="form.disabled">
             <mat-spinner diameter="16"></mat-spinner>
           </ng-container>
         </button>
         <button mat-button mat-dialog-close type="button">
-          Come back & Verify Contract
+          Come back & Verify Offer
         </button>
       </footer>
     </form>
