added missing dot

--- a/apps/catalog/catalog/src/app/marketplace/title/selection/specific-terms/specific-terms.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/specific-terms/specific-terms.component.html
@@ -1,7 +1,7 @@
 <global-modal>
   <section fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="12px" >
     <h2>Are you sure you wish to send this Offer?</h2>
-    <p>Please verify that all the details of the current Offer are convenient to you</p>
+    <p>Please verify that all the details of the current Offer are convenient to you.</p>
     <form [formGroup]="form" fxLayout="column" (ngSubmit)="createOffer()">
       <mat-form-field appearance="outline">
         <mat-label>Specific Terms</mat-label>
