--- a/apps/festival/festival/src/app/marketplace/home/home.component.html
+++ b/apps/festival/festival/src/app/marketplace/home/home.component.html
@@ -31,23 +31,31 @@
 
 <!-- Events Slider -->
 <ng-template #eventsSlider let-section>
-
+  <ng-container *ngIf="section | queryEvents | async as events">
+    <ng-container *ngIf="events.length">
+      <section class="events-slider" bgAsset="events_slider_background.png">
+        <header fxLayout fxLayoutAlign="space-between center" class="dark-contrast-theme">
+          <h2>{{ section.title }}</h2>
+          <a mat-button [routerLink]="section.link || '../event'" test-id="event-link">
+            <span>See all</span>
+            <mat-icon svgIcon="arrow_forward"></mat-icon>
+          </a>
+        </header>
+        <bf-slider hideIndicators loop class="dark-contrast-theme">
+          <ng-container *ngFor="let event of events">
+            <bf-slide hideOverlay>
+              <event-slide [event]="event"></event-slide>
+            </bf-slide>
+          </ng-container>
+        </bf-slider>
+      </section>
+    </ng-container>
+  </ng-container>
 </ng-template>
 
 <!-- Org Titles -->
 <ng-template #orgTitles let-section>
-  <section class="org-titles cards">
-    <header fxLayout fxLayoutAlign="space-between center">
-      <h2>{{ section.title }}</h2>
-      <a mat-button [routerLink]="section.link || '../organization'" color="primary" test-id="organization-link">
-        <span>See all</span>
-        <mat-icon svgIcon="arrow_forward"></mat-icon>
-      </a>
-    </header>
-    <org-banner [org]="section.orgId | getOrg | async" [titles]="section | queryTitles | async">
-      <p class="description">{{ section.description }}</p>
-    </org-banner>
-  </section>
+
 </ng-template>
 
 
