--- a/apps/festival/festival/src/app/marketplace/home/home.component.html
+++ b/apps/festival/festival/src/app/marketplace/home/home.component.html
@@ -26,31 +26,28 @@
 
 <!-- Slider -->
 <ng-template #slider let-section>
-
+  <section class="slider">
+    <bf-slider loop class="dark-contrast-theme">
+      <ng-container *ngFor="let movie of section | queryTitles | async" >
+        <bf-slide overlayColor="gradient" [image]="movie.banner" asset="empty_slider.png">
+          <movie-slide [movie]="movie">
+            <movie-slide-cta>
+              <a mat-flat-button color="primary" [routerLink]="['../title', movie.id]" class="detail">
+                More Details
+              </a>
+            </movie-slide-cta>
+            <movie-slide-actions>
+              <wishlist-button [movieId]="movie.id"></wishlist-button>
+            </movie-slide-actions>
+          </movie-slide>
+        </bf-slide>
+      </ng-container>
+    </bf-slider>
+  </section>
 </ng-template>
 
 <!-- Events Slider -->
 <ng-template #eventsSlider let-section>
-  <ng-container *ngIf="section | queryEvents | async as events">
-    <ng-container *ngIf="events.length">
-      <section class="events-slider" bgAsset="events_slider_background.png">
-        <header fxLayout fxLayoutAlign="space-between center" class="dark-contrast-theme">
-          <h2>{{ section.title }}</h2>
-          <a mat-button [routerLink]="section.link || '../event'" test-id="event-link">
-            <span>See all</span>
-            <mat-icon svgIcon="arrow_forward"></mat-icon>
-          </a>
-        </header>
-        <bf-slider hideIndicators loop class="dark-contrast-theme">
-          <ng-container *ngFor="let event of events">
-            <bf-slide hideOverlay>
-              <event-slide [event]="event"></event-slide>
-            </bf-slide>
-          </ng-container>
-        </bf-slider>
-      </section>
-    </ng-container>
-  </ng-container>
 </ng-template>
 
 <!-- Org Titles -->
