--- a/apps/festival/festival/src/app/marketplace/home/home.component.html
+++ b/apps/festival/festival/src/app/marketplace/home/home.component.html
@@ -6,37 +6,144 @@
 
 <!-- Banner -->
 <ng-template #banner let-section>
-
+  <header class="banner dark-contrast-theme" [bgRef]="section.background" bgAsset="banner.png">
+    <div class="banner-details">
+      <h4 *ngIf="section.subtitle">{{ section.subtitle }}</h4>
+      <h1 class="mat-display-2" *ngIf="section.title">{{ section.title }}</h1>
+      <p *ngIf="section.description">{{ section.description }}</p>
+      <div class="links">
+        <ng-container *ngFor="let link of section.links">
+          <ng-container *ngTemplateOutlet="linkBtn; context: {$implicit: link}"></ng-container>
+        </ng-container>
+      </div>
+    </div>
+    <img *ngIf="section.image?.storagePath" asset="" [ref]="section.image"/>
+  </header>
 </ng-template>
 
 <!-- Hero -->
 <ng-template #hero let-section>
-
+  <section class="hero" bgAsset="hero.png" [bgRef]="section.background">
+    <div fxLayout="column" fxLayoutAlign="center center" class="dark-contrast-theme">
+      <h1 *ngIf="section.title">{{ section.title }}</h1>
+      <p *ngIf="section.description">{{ section.description }}</p>
+      <div class="links" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="8px">
+        <ng-container *ngFor="let link of section.links">
+          <ng-container *ngTemplateOutlet="linkBtn; context: {$implicit: link}"></ng-container>
+        </ng-container>
+      </div>
+    </div>
+  </section>
 </ng-template>
 
 <!-- Titles -->
 <ng-template #titles let-section>
-
+  <section class="titles cards">
+    <header fxLayout fxLayoutAlign="space-between center">
+      <h2>{{ section.title }}</h2>
+      <a mat-button [routerLink]="section.link | getLink: '../title'" [queryParams]="section.link | getParams" color="primary" test-id="title-link">
+        <span>See all</span>
+        <mat-icon svgIcon="arrow_forward"></mat-icon>
+      </a>
+    </header>
+    <ng-container *ngIf="section | queryTitles | async | sortBy:section.sorting as movies">
+      <bf-carousel [columns]="{ gtMd: 4, md: 3, ltMd: 2 }">
+        <ng-container *ngFor="let movie of movies">
+          <ng-template carouselItem>
+            <movie-card [movie]="movie" [size]="section.mode" [link]="['../title', movie.id]">
+              <event-request-screening [movieId]="movie.id" iconOnly></event-request-screening>
+            </movie-card>
+          </ng-template>
+        </ng-container>
+      </bf-carousel>
+    </ng-container>
+  </section>
 </ng-template>
 
 <!-- Orgs -->
 <ng-template #orgs let-section>
-
+  <section class="orgs cards">
+    <header fxLayout fxLayoutAlign="space-between center">
+      <h2>{{ section.title }}</h2>
+      <a mat-button [routerLink]="section.link | getLink: '../organization'" [queryParams]="section.link | getParams" color="primary" test-id="organization-link">
+        <span>See all</span>
+        <mat-icon svgIcon="arrow_forward"></mat-icon>
+      </a>
+    </header>
+    <article>
+      <ng-container *ngIf="section | queryOrgs | async as orgs">
+        <bf-carousel [columns]="{ gtMd: 6, md: 5, sm: 4, xs: 3 }">
+          <ng-container *ngFor="let org of orgs">
+            <ng-template carouselItem>
+              <org-card-minimal [org]="org"></org-card-minimal>
+            </ng-template>
+          </ng-container>
+        </bf-carousel>
+      </ng-container>
+    </article>
+  </section>
 </ng-template>
 
 <!-- Slider -->
 <ng-template #slider let-section>
-
+  <section class="slider">
+    <bf-slider loop class="dark-contrast-theme">
+      <ng-container *ngFor="let movie of section | queryTitles | async" >
+        <bf-slide overlayColor="gradient" [image]="movie.banner" asset="empty_slider.png">
+          <movie-slide [movie]="movie">
+            <movie-slide-cta>
+              <a mat-flat-button color="primary" [routerLink]="['../title', movie.id]" class="detail">
+                More Details
+              </a>
+            </movie-slide-cta>
+            <movie-slide-actions>
+              <wishlist-button [movieId]="movie.id"></wishlist-button>
+            </movie-slide-actions>
+          </movie-slide>
+        </bf-slide>
+      </ng-container>
+    </bf-slider>
+  </section>
 </ng-template>
 
 <!-- Events Slider -->
 <ng-template #eventsSlider let-section>
-
+  <ng-container *ngIf="section | queryEvents | async as events">
+    <ng-container *ngIf="events.length">
+      <section class="events-slider" bgAsset="events_slider_background.png">
+        <header fxLayout fxLayoutAlign="space-between center" class="dark-contrast-theme">
+          <h2>{{ section.title }}</h2>
+          <a mat-button [routerLink]="section.link || '../event'" test-id="event-link">
+            <span>See all</span>
+            <mat-icon svgIcon="arrow_forward"></mat-icon>
+          </a>
+        </header>
+        <bf-slider hideIndicators loop class="dark-contrast-theme">
+          <ng-container *ngFor="let event of events">
+            <bf-slide hideOverlay>
+              <event-slide [event]="event"></event-slide>
+            </bf-slide>
+          </ng-container>
+        </bf-slider>
+      </section>
+    </ng-container>
+  </ng-container>
 </ng-template>
 
 <!-- Org Titles -->
 <ng-template #orgTitles let-section>
-
+  <section class="org-titles cards">
+    <header fxLayout fxLayoutAlign="space-between center">
+      <h2>{{ section.title }}</h2>
+      <a mat-button [routerLink]="section.link || '../organization'" color="primary" test-id="organization-link">
+        <span>See all</span>
+        <mat-icon svgIcon="arrow_forward"></mat-icon>
+      </a>
+    </header>
+    <org-banner [org]="section.orgId | getOrg | async" [titles]="section | queryTitles | async">
+      <p class="description">{{ section.description }}</p>
+    </org-banner>
+  </section>
 </ng-template>
 
 
