--- a/libs/movie/src/lib/movie/components/card/card.component.html
+++ b/libs/movie/src/lib/movie/components/card/card.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngIf="(ltLg$ | async) === false  else forTouchScreen">
     <img [ref]="movie | movieImage: size | storageFile: 'movies':size:movie.id" [asset]="placeholderAsset" [ratio]="size" alt="Movie Illustration">
     <a [routerLink]="link" fxLayout="column" fxLayoutAlign="center center" class="overlay" *ngIf="hasOverlay" @scaleIn>
-      <wishlist-button [movieId]="movie.id" small></wishlist-button>
+      <wishlist-button *ngIf="showWishlistButton" [movieId]="movie.id" small></wishlist-button>
       <b class="mat-subtitle view-more" @scaleIn color="primary">View More</b>
     </a>
   </ng-container>
