finishing deal-create-offer test

--- a/apps/catalog/catalog/src/app/marketplace/title/selection/congratulations/congratulations.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/congratulations/congratulations.component.html
@@ -5,5 +5,5 @@
   </p>
   <button (click)="openIntercom()" mat-button>Contact Archipel Team</button>
   <img asset="contract_offer.svg" alt="Offer has been created successfully">
-  <a mat-flat-button color="primary" routerLink="../../offer">See Offers & Deals</a>
+  <a mat-flat-button color="primary" routerLink="../../offer" test-id="see-offers-and-deals">See Offers & Deals</a>
   <a mat-button color="primary" routerLink="/c/o/marketplace/title">Continue browsing Library</a>
