--- a/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
@@ -32,7 +32,7 @@
         <mat-form-field appearance="outline" price>
           <mat-label>Price</mat-label>
           <input matInput type="number" min="0" [value]="contract.price"
-            (input)="setPrice(i, $event.target.value)" (blur)="updatePrice(i, $event.target.value)" />
+            (input)="setPrice(i, $event.target.value)" (blur)="updatePrice(i, $event.target.value)" test-id="price"/>
           <mat-icon matPrefix [svgIcon]="currencyForm.value"></mat-icon>
           <mat-hint>Leave this field empty to request an asking price.</mat-hint>
         </mat-form-field>
@@ -65,7 +65,7 @@
     </ng-container>
     <footer fxLayout="column" fxLayoutAlign="center center" class="summary" test-id="footer-total-price">
       <p test-id="total-price">Total Price: {{ total$ | async | currency:currencyForm.value }}</p>
-      <button mat-flat-button color="accent" (click)="createOffer(bucket)" test-id="create-offer">Create Offer</button>
+      <button mat-flat-button color="accent" (click)="createOffer(bucket)" test-id="validate-offer">Create Offer</button>
     </footer>
   </ng-container>
 </ng-container>
