--- a/apps/catalog/catalog/src/app/marketplace/title/selection/specific-terms/specific-terms.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/specific-terms/specific-terms.component.html
@@ -29,7 +29,7 @@
           test-id="delivery-list">
         </textarea>
       </mat-form-field>
-      <mat-checkbox class="example-margin" formControlName="acceptTerms">
+      <mat-checkbox class="example-margin" formControlName="acceptTerms" test-id="accept-terms">
         <p>
           I confirm that I have read and agree the <a routerLink="/c/o/marketplace/terms" target="_blank">Terms & Conditions</a> that will applied to the offer.
         </p>
