--- a/apps/festival/festival/src/app/event/event.component.html
+++ b/apps/festival/festival/src/app/event/event.component.html
@@ -1,4 +1,4 @@
-<layout-event>
+<layout-anonymous>
   <aside>
     <marketplace-aside></marketplace-aside>
   </aside> 
@@ -9,5 +9,5 @@
     </a>
   </header>
 
-</layout-event>
+</layout-anonymous>
 <safari-banner *ngIf="(isMeeting$ | async)"></safari-banner>
