--- a/apps/festival/festival/src/app/organization/organization.component.html
+++ b/apps/festival/festival/src/app/organization/organization.component.html
@@ -1,4 +1,4 @@
-<layout-event>
+<layout-anonymous>
   <aside>
     <marketplace-aside></marketplace-aside>
   </aside> 
@@ -9,4 +9,4 @@
     </a>
   </header>
 
-</layout-event>
+</layout-anonymous>
