--- a/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/selection.component.html
@@ -13,7 +13,7 @@
         <p *ngIf="bucket | bucketTitles | getTitle | async as titles">
           {{ (titles | join:'title.international') }}
         </p>
-        <a mat-stroked-button color="primary" routerLink="/c/o/marketplace/title" test-id="create-offer">
+        <a mat-stroked-button color="primary" routerLink="/c/o/marketplace/title">
           Add more Titles
         </a>
       </div>
