--- a/libs/contract/src/lib/contract/components/confirm-decline/confirm-decline.component.html
+++ b/libs/contract/src/lib/contract/components/confirm-decline/confirm-decline.component.html
@@ -13,8 +13,7 @@
     <mat-form-field appearance="outline">
       <textarea matInput
         placeholder='"Offer price is too low", "Title is not available anymore", "Bad previous experience with buyer"'
-        cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="4" maxlength="500"
-        test-id="specific-terms" formControlName="message">
+        cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="4" maxlength="500" formControlName="message">
       </textarea>
       <mat-hint>Please specify why you want to decline this offer.</mat-hint>
     </mat-form-field>
