fix 'send offer' button test-id

--- a/apps/catalog/catalog/src/app/marketplace/title/selection/specific-terms/specific-terms.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/specific-terms/specific-terms.component.html
@@ -23,7 +23,7 @@
         </p>
       </mat-checkbox>
       <footer fxLayout="column" fxLayoutAlign="center center">
-        <button mat-flat-button color="primary" [disabled]="form.disabled || !form.value.acceptTerms" type="submit">
+        <button mat-flat-button color="primary" [disabled]="form.disabled || !form.value.acceptTerms" type="submit" test-id="send-offer">
           <span>
             Send your Offer
           </span>
