--- a/libs/organization/src/lib/organization/layout/view/view.component.html
+++ b/libs/organization/src/lib/organization/layout/view/view.component.html
@@ -22,7 +22,7 @@
   </ng-template>
 
   <header fxLayout="column" fxLayoutGap="20px" class="dark-contrast-theme" bgAsset="profil_banner.png">
-    <a mat-icon-button (click)="goBack()">
+    <a *ngIf="!isAnonymous" mat-icon-button (click)="goBack()">
       <mat-icon svgIcon="arrow_back"></mat-icon>
     </a>
     <div class="org-info" fxLayout="row" fxLayout.xs="column" fxLayoutAlign.xs="center center" fxLayoutGap="20px">
