--- a/apps/crm/crm/src/app/crm/pages/users/users.component.html
+++ b/apps/crm/crm/src/app/crm/pages/users/users.component.html
@@ -27,6 +27,10 @@
           Title Analytics
           <mat-icon svgIcon="arrow_upward"></mat-icon>
         </button>
+        <button mat-menu-item (click)="exportOrgAnalyticsPageViews(users)">
+          Org Analytics
+          <mat-icon svgIcon="arrow_upward"></mat-icon>
+        </button>
         <button mat-menu-item (click)="exportSearchAnalytics(users)">
           Search Analytics
           <mat-icon svgIcon="arrow_upward"></mat-icon>
